# masahiro-me

./: .clinerules  .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.run  Makefile  README.md  _wrangler.toml  cloudbuild.yaml  compose.yaml  docker-compose.yml  start_server.sh  wrangler.toml
app/: Cargo.toml  Trunk.toml  index.html  package.json  style.css  tailwind.config.js
app/js/: meta.js
app/src/: lib.rs  routes.rs
app/src/domain/entities/: category.rs
app/src/domain/repositories/: project_repository.rs
app/src/infrastructure/repositories/: project_repository.rs
app/src/pages/: bindings.rs  mod.rs  not_found.rs
app/src/pages/about/: index.rs
app/src/pages/posts/: detail.rs  index.rs
app/src/pages/posts/hook/: post.rs  posts.rs  related_posts.rs
app/src/pages/posts/shared/: categories.rs  loading_post.rs  loading_posts.rs  mod.rs  pagination.rs  post_body.rs  post_item.rs
app/src/pages/projects/: index.rs  mod.rs
app/src/pages/projects/shared/: bee.rs  project_header.rs  project_item.rs
app/src/pages/shared/: back_button.rs  footer.rs  header.rs  image.rs  layout.rs  metatag.rs  mod.rs
app/src/usecase/: exe.rs
backend/: .env.sample  .gitignore  Cargo.toml  README.md  askama.toml
backend/src/: app.rs  lib.rs
backend/src/domain/entities/: category.rs  media.rs  mod.rs  post.rs
backend/src/domain/repositories/: category_repository.rs  media_repository.rs  mod.rs  post_repository.rs
backend/src/infrastructure/: api.rs  kv.rs  mod.rs
backend/src/infrastructure/repositories/: category_repository.rs  media_repository.rs  mod.rs  post_repository.rs
backend/src/infrastructure/repositories/converter/: html_to_text_converter.rs  mod.rs  posts_from_api_to_posts_converter.rs
backend/src/infrastructure/repositories/types/: category_from_api.rs  media_from_api.rs  mod.rs  post_from_api.rs
backend/src/presentation/: about.html  back_button.html  category.html  footer.html  head.html  header.html  header_item.html  meta.html  pages.html  pagination.html  post.html  post_item.html  posts.html  project_header.html  project_item.html  projects.html  render.rs  sample.rs  template.html
backend/src/routes/: cors.rs  get_about.rs  get_about_page.rs  get_meta.rs  get_pages.rs  get_post.rs  get_post_page.rs  get_posts.rs  get_posts_page.rs  get_projects.rs  get_projects_page.rs  mod.rs  sitemap.rs
backend/src/usecase/: exe.rs  fetch_post_slugs_usecase.rs  fetch_post_usecase.rs  fetch_posts_usecase.rs  fetch_related_posts_usecase.rs  mod.rs
crates/app/: Cargo.toml  Trunk.toml  build.rs  index.html  package.json  style.css  tailwind.config.js
crates/app/assets/: _headers  _redirects
crates/app/assets/styles/: base.css
crates/app/src/: app.rs  lib.rs  routes.rs
crates/app/src/app/: app_state.rs  config.rs  pages.rs  route.rs  use_cases.rs
crates/app/src/app/pages/: about.rs  not_found.rs  posts.rs  projects.rs
crates/app/src/domain/entities/: mod.rs  post.rs
crates/app/src/infrastructure/repositories/: post_repository.rs  project_repository.rs
crates/app/src/pages/: mod.rs
crates/app/src/pages/about/: index.rs
crates/app/src/pages/posts/: index.rs  mod.rs
crates/app/src/pages/projects/: index.rs
crates/app/src/pages/shared/: back_button.rs  header.rs
crates/app/src/usecase/: fetch_past_work_projects_usecase.rs  fetch_posts_usecase.rs  fetch_work_projects_usecase.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/infrastructure/: repositories.rs
crates/infrastructure/src/infrastructure/repositories/: post_repository.rs  project_repository.rs
crates/pages/: Cargo.toml
crates/pages/src/: lib.rs  pages.rs
crates/pages/src/pages/: posts.rs  projects.rs  route.rs
crates/pages/src/pages/posts/: detail.rs  index.rs
crates/pages/src/pages/projects/: index.rs
crates/pages/src/pages/shared/: footer.rs  image.rs
crates/server/: Cargo.toml  Trunk.toml  index.html
crates/use_case/: Cargo.toml
crates/use_case/src/: lib.rs  use_case.rs
crates/use_case/src/port/: post_repository.rs  project_repository.rs
crates/use_case/src/use_case/: exe.rs  fetch_advisory_projects_usecase.rs  fetch_past_work_projects_usecase.rs  fetch_post_usecase.rs  fetch_posts_usecase.rs  fetch_related_posts_usecase.rs  fetch_work_projects_usecase.rs
frontend/: .dockerignore  .env.sample  Cargo.toml  Dockerfile.dev  Dockerfile.prod  Makefile  docker-compose.yml  sample.py
frontend/app/: .env  Cargo.toml  README.md  _redirects  index.html  package.json  tsconfig.json
frontend/app/functions/: _middleware.ts
frontend/app/src/: app.rs  lib.rs  routes.rs
frontend/app/src/domain/entities/: category.rs
frontend/app/src/infrastructure/repositories/: project_repository.rs
frontend/app/src/pages/: about.rs  pages.rs  post.rs  projects.rs
frontend/app/src/pages/about/: index.rs
frontend/app/src/pages/posts/: detail.rs  index.rs  mod.rs
frontend/app/src/presentation/: mod.rs
frontend/app/src/usecase/: fetch_advisory_projects_usecase.rs  mod.rs
frontend/functions/: _middleware.ts
frontend/middlewares/: package.json  tsconfig.json
frontend/middlewares/src/: _middleware.ts
frontend/runner/: Cargo.toml  README.md  _worker.js  index.html
frontend/runner/functions/: _middleware.js
frontend/runner/src/: lib.rs  main.rs
frontend/src/: main.rs  routes.rs
frontend/src/domain/entities/: post.rs
frontend/src/domain/repositories/: post_repository.rs
frontend/src/infrastructure/repositories/: mod.rs  post_repository.rs
frontend/src/pages/: mod.rs  pages.rs  post.rs  projects.rs
frontend/src/presentation/common/: back_button.rs  footer.rs  header.rs  link.rs
frontend/src/presentation/post/: loading_post.rs  mod.rs  post_item.rs
frontend/src/presentation/project/: project_header.rs
frontend/src/usecase/: fetch_post_usecase.rs  fetch_related_posts_usecase.rs
frontend/ssr/: Cargo.toml  README.md
frontend/ssr/src/: lib.rs  main.rs
frontend/ssr_server/: Cargo.toml  Dockerfile.dev  README.md  docker-compose.yml  tailwind.config.js
(+90 files in other folders)
