[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.82"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "1.0.116", default-features = false }
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "json",
] }
async-trait = "0.1.80"
log = "0.4.21"

[profile.release]
strip = 'debuginfo'
panic = 'abort'     # 大丈夫
debug = false       # debug情報なしの設定
codegen-units = 1
opt-level = 'z'     # optレベル最高
lto = true
