[package]
name = "backend"
version = "0.1.0"
authors = ["Masahiro Okubo"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]

[dependencies]
serde = "1.0.126"
serde_qs = "0.8.0"
cfg-if = "0.1.2"
worker = "0.0.15"
url = "2.2.2"
futures = "0.3"
anyhow = "1.0"
# wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.67"
serde-wasm-bindgen = "0.5.0"
async-trait = "0.1.68"

scraper = "0.12"
html2text = "0.4"
askama = "0.12.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
