[package]
name = "app"
version = "0.1.0"
authors = ["masahiro <stmhamachiii@gmail.com>"]
edition = "2021"

[[bin]]
name = "function_router"
required-features = ["yew/csr"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
serde = "=1.0.193"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
async-trait = "0.1.77"
log = "0.4.20"
wee_alloc = "0.4.5"
url = { version = "2.5.0", features = ["serde"] }
anyhow = { version = "1.0.79" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
use_case = { path = "../use_case" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
wasm-logger = "0.2.0"
