[package]
name = "app"
version = "1.1.0"
authors = ["masahiro <stmhamachiii@gmail.com>"]
edition = "2021"

[[bin]]
name = "function_router"
required-features = ["yew/csr"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
wee_alloc = "0.4.5"
url = { version = "2.5.0", features = ["serde"] }
serde = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
use_case = { path = "../use_case" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
wasm-logger = "0.2.0"
