[package]
name = "app"
version = "1.2.0"
authors = ["Masahiro Okubo"]
edition = "2021"

[[bin]]
name = "function_router"
required-features = ["yew/csr"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
use_case = { path = "../use_case" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
