[package]
name = "infrastructure"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79" }
async-trait = "0.1.77"
serde = { version = "=1.0.196", default-features = false }
serde_json = { version = "1.0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
domain = { path = "../domain" }
log = "0.4.20"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
mockito = "1.2.0"
