[package]
name = "infrastructure"
version = "1.2.0"
authors = ["Masahiro Okubo"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
domain = { path = "../domain" }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
mockito = "1.4.0"
