[package]
name = "server"
version = "1.2.0"
authors = ["Masahiro Okubo"]
edition = "2021"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]

[[bin]]
name = "hydrate"
required-features = ["hydration"]

[[bin]]
name = "server"
required-features = ["ssr"]

[dependencies]
yew = { version = "0.21.0", features = ["ssr", "hydration"] }
futures = { version = "0.3.30", features = ["std"], default-features = false }
log = { workspace = true }
async-trait = { workspace = true }
app = { path = "../app" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
use_case = { path = "../use_case" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
# axum = "0.6.20"
axum = "0.6"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs"] }
env_logger = { version = "0.11.0" }
clap = { version = "4.4.11", features = ["derive"] }
hyper = { version = "1.1", features = ["server", "http1"] }
jemallocator = "0.5.4"
reqwest = { workspace = true }
