[package]
name = "use_case"
version = "1.1.0"
authors = ["masahiro <stmhamachiii@gmail.com>"]
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
anyhow = { version = "1.0.79" }
async-trait = "0.1.77"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
