[package]
name = "use_case"
version = "1.1.0"
authors = ["masahiro <stmhamachiii@gmail.com>"]
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
