[package]
name = "runner"
version = "0.1.0"
authors = ["masahiro <stmhamachiii@gmail.com>"]
edition = "2021"

[[bin]]
name = "simple_ssr_hydrate"
required-features = ["hydration"]

[[bin]]
name = "simple_ssr_server"
required-features = ["ssr"]

[dependencies]
yew = { version = "0.20", features = ["ssr", "hydration"] }
yew-router = "0.17.0"
futures = "0.3"
log = "0.4"
app = { path = "../app" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.85"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.27.0", features = ["full"] }
axum = "0.6"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs"] }
env_logger = "0.10"
clap = { version = "3.1.7", features = ["derive"] }
hyper = { version = "0.14", features = ["server", "http1"] }
jemallocator = "0.5"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

