[package]
name = "ssr"
version = "0.1.0"
authors = ["masahiro <stmhamachiii@gmail.com>"]
# edition = "2021"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20", features = ["ssr", "hydration", "csr"] }
yew-router = "0.17.0"
web-sys = { version = "0.3" }
# wasm-bindgen = "0.2.85"
futures = "0.3"
bytes = "1.0"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
async-std = { version = "1.10", features = ["attributes"] }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.62"

app = { path = "../app" }

[profile.release]
opt-level = "s"
