[package]
name = "ssr"
version = "0.1.0"
authors = ["masahiro <stmhamachiii@gmail.com>"]
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["ssr", "hydration", "csr"] }
yew-router = "0.17.0"
futures = "0.3"
bytes = "1.0"
app = { path = "../app" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3"
clap = { version = "3.1.7", features = ["derive"] }

[profile.release]
opt-level = "s"
